Change shortcuts of standard actions if standard shortcut changes

Now when standard shortcuts are changed while an application
is running, changes take effect immediately.
BUG:426656