src/kstandardaction.cpp
@@ -13,6 +13,7 @@
 #include <KAboutData>
 #include <KAcceleratorManager>
 #include <KLocalizedString>
+#include <KStandardShortcutWatcher>
 #include <QGuiApplication>
 #include <QLayout>
 #include <QMainWindow>
@@ -22,13 +23,30 @@
 
 namespace KStandardAction
 {
-AutomaticAction::AutomaticAction(const QIcon &icon, const QString &text, const QList<QKeySequence> &shortcut, const char *slot, QObject *parent)
+AutomaticAction::AutomaticAction(const QIcon &icon,
+                                 const QString &text,
+                                 KStandardShortcut::StandardShortcut standardShortcut,
+                                 const char *slot,
+                                 QObject *parent)
     : QAction(parent)
 {
     setText(text);
     setIcon(icon);
+
+    const QList<QKeySequence> shortcut = KStandardShortcut::shortcut(standardShortcut);
     setShortcuts(shortcut);
     setProperty("defaultShortcuts", QVariant::fromValue(shortcut));
+    connect(KStandardShortcut::shortcutWatcher(),
+            &KStandardShortcut::StandardShortcutWatcher::shortcutChanged,
+            this,
+            [standardShortcut, this](KStandardShortcut::StandardShortcut id, const QList<QKeySequence> &newShortcut) {
+                if (id != standardShortcut) {
+                    return;
+                }
+                setShortcuts(newShortcut);
+                setProperty("defaultShortcuts", QVariant::fromValue(newShortcut));
+            });
+
     connect(this, SIGNAL(triggered()), this, slot);
 }
 
@@ -309,6 +327,16 @@ QAction *_k_createInternal(StandardAction id, QObject *parent)
             pAction->setShortcuts(cut);
             pAction->setProperty("defaultShortcuts", QVariant::fromValue(cut));
         }
+        pAction->connect(KStandardShortcut::shortcutWatcher(),
+                         &KStandardShortcut::StandardShortcutWatcher::shortcutChanged,
+                         pAction,
+                         [pAction, shortcut = pInfo->idAccel](KStandardShortcut::StandardShortcut id, const QList<QKeySequence> &newShortcut) {
+                             if (id != shortcut) {
+                                 return;
+                             }
+                             pAction->setShortcuts(newShortcut);
+                             pAction->setProperty("defaultShortcuts", QVariant::fromValue(newShortcut));
+                         });
 
         pAction->setObjectName(pInfo->psName);
     }
@@ -592,8 +620,7 @@ static QAction *buildAutomaticAction(QObject *parent, StandardAction id, const c
         return nullptr;
     }
 
-    AutomaticAction *action =
-        new AutomaticAction(QIcon::fromTheme(p->psIconName), p->psLabel.toString(), KStandardShortcut::shortcut(p->idAccel), slot, parent);
+    AutomaticAction *action = new AutomaticAction(QIcon::fromTheme(p->psIconName), p->psLabel.toString(), p->idAccel, slot, parent);
 
     action->setObjectName(p->psName);
     if (!p->psToolTip.isEmpty()) {
